[tool.poetry]
name = "agentic_so101_test"
version = "0.1.0"
description = "Your project description"
authors = ["Pranav Naik pranavnaik59@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
lerobot = {extras = ["pi0","feetech"], git = "https://github.com/huggingface/lerobot.git", rev = "main"}
google-genai = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"